--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "mern",
+  "name": "nyt-googlebooks",
   "version": "1.0.0",
-  "description": "Mern Demo",
-  "main": "server.js",
+  "description": "",
+  "private": true,
+  "main": "server/index.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "node server.js",
+    "start:prod": "node server/index.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
     "install": "cd client && npm install",
@@ -15,11 +16,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^3.5.0",
-    "nodemon": "^1.11.0"
+    "babel-preset-env": "^1.7.0",
+    "body-parser": "^1.17.2",
+    "express": "^4.15.4",
+    "mongoose": "^4.13.17",
+    "nodemon": "^1.12.0",
+    "webpack-cli": "^3.1.2"
   },
   "dependencies": {
-    "express": "^4.16.3",
+    "axios": "^0.16.2",
+    "concurrently": "^4.1.0",
+    "cors-express": "^0.2.2",
     "if-env": "^1.0.4"
   }
 }
