--- a/client/package.json
+++ b/client/package.json
@@ -5,13 +5,11 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "test": "test",
-    "start": "./node_modules/.bin/webpack-dev-server"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
-  "keywords": [
-    "React",
-    "API"
-  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
@@ -39,6 +37,7 @@
     "react-dom": "^15.5.4",
     "react-icons": "^2.2.5",
     "react-router-dom": "^4.1.1",
+    "react-scripts": "^2.1.1",
     "react-scroll": "^1.5.2",
     "webpack-cli": "^3.1.2"
   },
