--- a/client/package.json
+++ b/client/package.json
@@ -1,45 +1,23 @@
 {
-  "name": "nyt-googlebooks",
-  "version": "0.1.0",
-  "description": "Google-books search",
+  "name": "client",
+  "version": "1.0.0",
+  "description": "",
   "private": true,
-  "main": "index.js",
+  "proxy": "http://localhost:5000/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "keywords": [],
   "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "autoprefixer-loader": "^3.2.0",
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-latest": "^6.24.1",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^0.28.1",
-    "json-loader": "^0.5.4",
-    "node-sass": "^4.5.2",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.17.0",
-    "sw-precache-webpack-plugin": "^0.11.0",
-    "webpack": "^2.5.0",
-    "webpack-dev-server": "^2.4.5"
-  },
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
-    "idb": "^2.0.3",
-    "prop-types": "^15.5.10",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-icons": "^2.2.5",
-    "react-router-dom": "^4.1.1",
-    "react-scripts": "^2.1.1",
-    "react-scroll": "^1.5.2",
-    "webpack-cli": "^3.1.2"
-  },
-  "proxy": "localhost:5000"
+    "axios": "^0.18.0",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^2.1.1"
+  }
 }
