--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,7 @@
   "private": true,
   "proxy": "http://localhost:5000/",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "react-scripts start"
   },
   "keywords": [],
   "author": "",
