--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "node-sass": "^4.10.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
