--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.16.2",
     "concurrently": "^4.1.0",
     "cors-express": "^0.2.2",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "if-env": "^1.0.4",
     "react-icons": "^3.2.2"
