--- a/package.json
+++ b/package.json
@@ -1,3 +1,5 @@
+
+
 {
   "name": "nyt-googlebooks",
   "version": "1.0.0",
@@ -29,6 +31,7 @@
     "cors-express": "^0.2.2",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "http-proxy-middleware": "^0.19.1",
     "if-env": "^1.0.4",
     "react-icons": "^3.2.2"
   }
