--- a/package.json
+++ b/package.json
@@ -1,5 +1,3 @@
-
-
 {
   "name": "nyt-googlebooks",
   "version": "1.0.0",
@@ -32,7 +30,9 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "http-proxy-middleware": "^0.19.1",
+    "idb": "^2.1.3",
     "if-env": "^1.0.4",
+    "node-sass": "^4.10.0",
     "react-icons": "^3.2.2"
   }
 }
