--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nyt-googlebooks",
+  "name": "NYT-GoogleBooks",
   "version": "1.0.0",
   "description": "",
   "private": true,
@@ -19,8 +19,7 @@
     "babel-preset-env": "^1.7.0",
     "body-parser": "^1.17.2",
     "express": "^4.16.4",
-    "nodemon": "^1.12.0",
-    "webpack-cli": "^3.1.2"
+    "nodemon": "^1.12.0"
   },
   "dependencies": {
     "axios": "^0.16.2",
