--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "1.0.0",
   "description": "",
+  "proxy": "http://localhost:5000",
   "private": true,
   "scripts": {
     "start": "react-scripts start",
