--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "private": true,
   "main": "server.js",
   "scripts": {
-  "start": "node server.js",
-		[...]
-  },
+	"start": "node server.js"
+	},
   "author": "",
   "license": "ISC",
   "devDependencies": {
